# RAG_Agent

./: .gitignore  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS.md  PHASE1_COMPLETE.md  README.md  README_IMPLEMENTATION.md  README_NEW.md  REFACTORING_REPORT.md  REFACTORING_SUMMARY.md  docker-compose.yml  requirements-langgraph.txt  requirements.txt
api/: main.py  middleware.py  schemas.py
app/: __init__.py  config.py
cli/: chat.py
configs/: default.yaml
core/: caching.py  config.py  eval.py  exceptions.py  model_adapters.py  observability.py  orchestrator.py  prompts.py  router.py  utils.py  validation.py
data/: cli_docs.json  custom_docs.json  docs.json  faiss_index.iv  faiss_mapping.json
docs/: ADVANCED_FEATURES.md  CHAT.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  architecture.md
examples/: dataset_multi_hop.json  phase2_demo.py  richer_dataset.json
knowledge-graph-chatbot/services/ai-pipeline/: Dockerfile  pyproject.toml  requirements.txt
knowledge-graph-chatbot/services/ai-pipeline/src/: main.py
knowledge-graph-chatbot/services/ai-pipeline/src/grpc/: clients.py  server.py
knowledge-graph-chatbot/services/ai-pipeline/src/llm/: client.py  streaming.py
knowledge-graph-chatbot/services/ai-pipeline/src/nlp/: chunker.py  embedder.py  extractor.py
knowledge-graph-chatbot/services/ai-pipeline/src/rag/: pipeline.py  prompt_builder.py  retriever.py
knowledge-graph-chatbot/services/ai-pipeline/tests/: test_extractor.py  test_rag.py
knowledge-graph-chatbot/services/graph-engine/: Cargo.toml  Dockerfile  build.rs
knowledge-graph-chatbot/services/graph-engine/src/: error.rs  main.rs
knowledge-graph-chatbot/services/graph-engine/src/graph/: mod.rs  query.rs  store.rs  traversal.rs
knowledge-graph-chatbot/services/graph-engine/src/grpc/: mod.rs  server.rs
knowledge-graph-chatbot/services/graph-engine/src/vector/: hnsw.rs  mod.rs  similarity.rs
knowledge-graph-chatbot/services/graph-engine/tests/: graph_tests.rs  vector_tests.rs
reports/: coverage.xml  junit.xml  (+1 more)
(+323 files in other folders)
