[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-pipeline"
version = "0.1.0"
description = "NLP entity/relation extraction, embedding generation, LLM inference, and RAG orchestration"
requires-python = ">=3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
